--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -67,7 +67,7 @@ $font-main: 'Oswald', sans-serif;
   flex: 1 1 100%;
   align-items: center;
   justify-content: center;
-  background-image: url('http://localhost:3000/images/main/pizza-1.jpg');
+  background-image: url('https://i.postimg.cc/L4VFbMn8/pizza-1.jpg');
   background-position: center center;
   background-size: cover;
   margin-right: 3px;
@@ -83,7 +83,7 @@ $font-main: 'Oswald', sans-serif;
   flex: 1 1 100%;
   align-items: center;
   justify-content: center;
-  background-image: url('http://localhost:3000/images/main/pizza-2.jpg');
+  background-image: url('https://i.postimg.cc/PJScrTwb/pizza-2.jpg');
   background-position: center center;
   background-size: cover;
   margin-left: 3px;
@@ -218,7 +218,7 @@ $font-main: 'Oswald', sans-serif;
 
 .main-menu-row-galery:nth-child(1) .main-menu-row-child-galery:nth-child(1) .main-menu-row-sub-child-galery:nth-child(1){
   display: flex;
-  background-image: url('http://localhost:3000/images/main/pizza-3.jpg');
+  background-image: url('https://i.postimg.cc/3N8VTddJ/pizza-3.jpg');
   background-position: center center;
   background-size: cover;
   align-items: center;
@@ -240,7 +240,7 @@ $font-main: 'Oswald', sans-serif;
 }
 
 .main-menu-row-galery:nth-child(1) .main-menu-row-child-galery:nth-child(2) .main-menu-row-sub-child-galery:nth-child(1){
-  background-image: url('http://localhost:3000/images/main/pizza-5.jpg');
+  background-image: url('https://i.postimg.cc/HWzFt4hJ/pizza-5.jpg');
   background-position: center center;
   background-size: cover;
   display: flex;
@@ -263,7 +263,7 @@ $font-main: 'Oswald', sans-serif;
 }
 
 .main-menu-row-galery:nth-child(1) .main-menu-row-child-galery:nth-child(3) .main-menu-row-sub-child-galery:nth-child(1){
-  background-image: url('http://localhost:3000/images/main/pizza-4.jpg');
+  background-image: url('https://i.postimg.cc/W1dRzFSd/pizza-4.jpg');
   background-position: center center;
   background-size: cover;
   display: flex;
@@ -286,7 +286,7 @@ $font-main: 'Oswald', sans-serif;
 }
 
 .main-menu-row-galery:nth-child(2) .main-menu-row-child-galery:nth-child(1) .main-menu-row-sub-child-galery:nth-child(1){
-  background-image: url('http://localhost:3000/images/main/pizza-7.jpg');
+  background-image: url('https://i.postimg.cc/L6rKTtC2/7.jpg');
   background-position: center center;
   background-size: cover;
   display: flex;
@@ -309,7 +309,7 @@ $font-main: 'Oswald', sans-serif;
 }
 
 .main-menu-row-galery:nth-child(2) .main-menu-row-child-galery:nth-child(3) .main-menu-row-sub-child-galery:nth-child(1){
-  background-image: url('http://localhost:3000/images/main/pizza-9.jpg');
+  background-image: url('https://i.postimg.cc/bwDMpXNb/pizza-9.jpg');
   background-position: center center;
   background-size: cover;
   display: flex;
@@ -332,7 +332,7 @@ $font-main: 'Oswald', sans-serif;
 }
 
 .main-menu-row-galery:nth-child(2) .main-menu-row-child-galery:nth-child(2) .main-menu-row-sub-child-galery:nth-child(1){
-  background-image: url('http://localhost:3000/images/main/pizza-8.jpg');
+  background-image: url('https://i.postimg.cc/L6rKTtC2/7.jpg');
   background-position: center center;
   background-size: cover;
   display: flex;
